@@ -1,5 +1,5 @@
 {
-  "count": 40,
+  "count": 41,
   "uniques": 12,
   "clones": [
     {
@@ -60,6 +60,11 @@
     {
       "timestamp": "2022-10-20T00:00:00Z",
       "count": 3,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-10-21T00:00:00Z",
+      "count": 1,
       "uniques": 1
     }
   ]
